<resources>
    <string name="app_name">Wallpapers</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="set_wallpaper">Set wallpaper</string>


    <!-- Ad Mob IDs -->
    <string name="app_id_admob">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_admob_id">ca-app-pub-3940256099942544/1033173712</string>


    <!-- Strings Client id unsplash.com -->
    <string name="unsplash_access_key">f0ae20ec8820c9013f3877e47ed0d0c1010478f0dcb327064292e32e51f3b142</string>

    <string name="Color">Color</string>
    <string name="Effects">Effects</string>
    <string name="Fonts">Fonts</string>
    <string name="Shader">Shader</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backgrond">Backgrounds</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="camera">Camera</string>
    <string name="check_internet">Oops! something went wrong. Please check your internet connection and try again.</string>
    <string name="choose_bg">Choose Background</string>
    <string name="choose_sticker">Choose Sticker</string>
    <string name="clr_opacity">Color and Opacity</string>
    <string name="cntrls">Controls</string>
    <string name="create_dir_err">Can not create directory to save image.</string>
    <string name="crop">Crop</string>
    <string name="custom">Custom</string>
    <string name="duplicate">Duplicate</string>
    <string name="edit_quotes">Edit Quotes</string>
    <string name="email_error">No email client installed.</string>
    <string name="email_msg">Write your problems or suggestions here..</string>
    <string name="error">Error</string>
    <string name="error_edit">Quote can not be empty</string>
    <string name="exit_title">Exit Alert!</string>
    <string name="exit_warning">Are you sure you want to exit ?</string>
    <string name="format">Format</string>
    <string name="gallery">Gallery</string>
    <string name="gopremium">Go Premium</string>
    <string name="headerFailedAds">Failed Loading Ads</string>
    <string name="headerMain">Custom Wallpapers</string>
    <string name="helpTag">Do not worry, we are here to help you.</string>
    <string name="helpTag1">Or maybe, ask for a new feature.</string>
    <string name="helpTag2">Please give 5 stars in Play Store.</string>
    <string name="helpTitle1">Give Suggestion</string>
    <string name="helpTitle2">Thank you!</string>
    <string name="helpTitleC">Need Help?</string>
    <string name="hint_editquote">What was said?</string>
    <string name="image_error">Oops! something went wrong. Please try again with different image.</string>
    <string name="leavetext">Are you sure you want to leave this page ?</string>
    <string name="max_limit_quote">Max Quote length ca not be greater than 500.</string>
    <string name="more">More APP Ad</string>
    <string name="no">No</string>
    <string name="no1">No thanks!</string>
    <string name="no_internet">No Internet</string>
    <string name="no_quote">No Quote added</string>
    <string name="ok">OK</string>
    <string name="otherapps">Try our other Apps</string>
    <string name="permission">Permission!</string>
    <string name="permission_des">Grant these permissions to use Cool Status &amp; Quotes</string>
    <string name="permission_des1">Note: You can also give permissions in Settings --&gt; apps --&gt; Cool Status &amp; Quotes --&gt;Permissions</string>
    <string name="picUpImg">Oops! Something went wrong Please try again with different Image.</string>
    <string name="pick_color">Picked color</string>
    <string name="plzwait">Please wait..</string>
    <string name="preimum_msg1">10000+ Quotes</string>
    <string name="preimum_msg2">Quotes Editor</string>
    <string name="premium_feature">Premium Features</string>
    <string name="premium_msg3">Premium Arts</string>
    <string name="premium_msg4">Premium Backgrounds</string>
    <string name="premium_msg5">No Ads</string>
    <string name="premium_msg6">No Watermark</string>
    <string name="punch">Highlight</string>
    <string name="remove_watermark">Remove Watermark</string>
    <string name="save_Imgmsg">Your Quotes successfully saved as Image in-</string>
    <string name="save_error">Error saving image. Please try again.</string>
    <string name="save_image">Picture saved</string>
    <string name="saved">Image saved to:</string>
    <string name="selectPic">Select Picture</string>
    <string name="settings">Settings</string>
    <string name="shadow">Shadow</string>
    <string name="share">Share</string>
    <string name="share_image">Share Image</string>
    <string name="share_via">Share Via</string>
    <string name="sharetext">This quote was created using</string>
    <string name="sharetext1">Make your own .. \n\n</string>
    <string name="square">Square</string>
    <string name="storage">Storage</string>
    <string name="str_empaty">Enter a word to search</string>
    <string name="tab_write">Tap on word to highlight</string>
    <string name="txt">Text</string>
    <string name="txtAskhelp">Ask for Help</string>
    <string name="txtAskhelp1">send</string>
    <string name="txtAskhelp2">Give 5 Stars</string>
    <string name="txtCopy">Quotes copied</string>
    <string name="txtHederUse1">Use Premium Backgrounds</string>
    <string name="txtHederUse2">Use Premium Arts</string>
    <string name="txtHederUse3">Remove Watermark</string>
    <string name="txtNotilte1">We tried to make this app helpful and easy to use. Please select how you feel.</string>
    <string name="txtUse">Use</string>
    <string name="txtUse1">* Use this Premium Backgrounds by watching Ad. (One Time) *</string>
    <string name="txtUse2">* Use this Premium Art by watching Ad. (One Time) *</string>
    <string name="txtUse3">* Remove watermark by watching Ad. (One Time) *</string>
    <string name="txt_Free">Free</string>
    <string name="txt_Monthly">Monthly</string>
    <string name="txt_Yearly">Yearly</string>
    <string name="txt_asImg">As Image</string>
    <string name="txt_asQutesOfDay">Quote of the Day</string>
    <string name="txt_asRate">Rate App</string>
    <string name="txt_asTxt">As Text</string>
    <string name="txt_copy">Copy</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_empaty">Wallpapers not found!!</string>
    <string name="txt_helpFeed">Help and Feedback</string>
    <string name="txt_helpSupport">Help and Support</string>
    <string name="txt_like">Like</string>
    <string name="txt_liked_quotes">Liked Quotes</string>
    <string name="txt_privacy1">Privacy Policy</string>
    <string name="txt_rs">$2.5</string>
    <string name="txt_save">Save</string>
    <string name="txt_search">Search quotes here</string>
    <string name="txt_share">Share</string>
    <string name="txt_sticker">Sticker</string>
    <string name="txt_templt">Styles</string>
    <string name="txtbad">Bad</string>
    <string name="txtexcellent">Excellent</string>
    <string name="txtgood">Good</string>
    <string name="unsave">Unsaved work</string>
    <string name="watchAd_msg1">* Remove Watermark by watching an Ad. (One Time) *</string>
    <string name="yes">Yes</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
