<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.digiclack.wallpapers.utility.CustomTextView
            android:id="@+id/headertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/unsave"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:textStyle="bold"
            app:assetFontTextName="Header"
            app:customColor="@color/black" />
    </RelativeLayout>

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/header"
        android:background="@color/btnBase" />

    <com.digiclack.wallpapers.utility.CustomTextView
        android:id="@+id/exit_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v1"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/leavetext"
        android:textSize="18sp"
        app:assetFontTextName="Text"
        app:customColor="@color/black" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exit_msg"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1.0"
            android:background="@android:color/holo_blue_bright"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="2dp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1.0"
            android:background="@android:color/holo_blue_bright"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="2dp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
