<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <com.digiclack.wallpapers.utility.CustomTextView
            android:id="@+id/heater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:text="@string/save_image"
            android:textAllCaps="true"
            android:textSize="22sp"
            app:assetFontTextName="Header"
            app:customColor="@color/black" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/btnBase" />

    <com.digiclack.wallpapers.utility.CustomTextView
        android:id="@+id/txt_free"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/save_Imgmsg"
        android:textSize="18sp"
        app:assetFontTextName="Text"
        app:customColor="@color/black" />

    <com.digiclack.wallpapers.utility.CustomTextView
        android:id="@+id/txt_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/save_Imgmsg"
        android:textSize="18sp"
        app:assetFontTextName="Text"
        app:customColor="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@color/colormediam"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>
