<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/re_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/list_of_brnd"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/backrund1" />

                <com.digiclack.wallpapers.utility.CustomTextView
                    android:id="@+id/footer_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/list_of_brnd"
                    android:gravity="center"
                    android:text="@string/backgrond"
                    android:textSize="12sp"
                    app:assetFontTextName="Text"
                    app:customColor="@color/white" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/re_sticker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center">

            <ImageView
                android:id="@+id/list_of_sticker"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/stickerr1" />

            <com.digiclack.wallpapers.utility.CustomTextView
                android:id="@+id/footer_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/list_of_sticker"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/txt_sticker"
                android:textSize="12sp"
                app:assetFontTextName="Text"
                app:customColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_effects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center">

            <ImageView
                android:id="@+id/footer_effects_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/effects_image1" />

            <com.digiclack.wallpapers.utility.CustomTextView
                android:id="@+id/footer_text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/footer_effects_image"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/Effects"
                android:textSize="12sp"
                app:assetFontTextName="Text"
                app:customColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rr_addtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_addtext"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/text_image1" />

            <com.digiclack.wallpapers.utility.CustomTextView
                android:id="@+id/text_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_addtext"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="Add Text"
                android:textSize="12sp"
                app:assetFontTextName="Text"
                app:customColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
